# pharma-derive

./: .dockerignore  .env.example  .gitignore  .importlinter  .pre-commit-config.yaml  ARCHITECTURE.md  BUGS.md  CLAUDE.md  Dockerfile  FIX_PLAN.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_PHASE_1.md  IMPLEMENTATION_PLAN_PHASE_10_1.md  IMPLEMENTATION_PLAN_PHASE_10_2.md  IMPLEMENTATION_PLAN_PHASE_10_3.md  IMPLEMENTATION_PLAN_PHASE_11_1.md  IMPLEMENTATION_PLAN_PHASE_11_2.md  IMPLEMENTATION_PLAN_PHASE_11_3.md  IMPLEMENTATION_PLAN_PHASE_11_4.md  IMPLEMENTATION_PLAN_PHASE_12.md  IMPLEMENTATION_PLAN_PHASE_13_1.md  IMPLEMENTATION_PLAN_PHASE_13_2.md  IMPLEMENTATION_PLAN_PHASE_14_1.md  IMPLEMENTATION_PLAN_PHASE_14_2.md  IMPLEMENTATION_PLAN_PHASE_14_3.md  IMPLEMENTATION_PLAN_PHASE_14_4.md  IMPLEMENTATION_PLAN_PHASE_16_1.md  IMPLEMENTATION_PLAN_PHASE_16_2_A.md  IMPLEMENTATION_PLAN_PHASE_16_2_B.md  IMPLEMENTATION_PLAN_PHASE_16_3_0.md  IMPLEMENTATION_PLAN_PHASE_16_3_A.md  IMPLEMENTATION_PLAN_PHASE_16_3_B.md  IMPLEMENTATION_PLAN_PHASE_16_4.md  IMPLEMENTATION_PLAN_PHASE_16_5.md  IMPLEMENTATION_PLAN_PHASE_17.md  IMPLEMENTATION_PLAN_PHASE_17_1.md  IMPLEMENTATION_PLAN_PHASE_17_2.md  IMPLEMENTATION_PLAN_PHASE_17_3.md  IMPLEMENTATION_PLAN_PHASE_18_1.md  IMPLEMENTATION_PLAN_PHASE_2.md  (+21 more)
.claude/: settings.local.json
.claude/agents/: pydantic-ai-reviewer.md
.claude/commands/: review-chaos.md
.claude/rules/: enum-discipline.md  exception-handling.md  llm-gateway.md  logging-instrumentation.md  module-size-and-focus.md  test-quality.md
.github/workflows/: ci.yml
config/: README.md  guards.yaml
config/agents/: README.md  auditor.yaml  coder.yaml  debugger.yaml  qc_programmer.yaml  spec_interpreter.yaml
config/pipelines/: clinical_derivation.yaml  enterprise.yaml  express.yaml
docs/: COMPOSITION_LAYER.md  Clinical Data Derivation Engine.docx  DOC_REVIEW.md  GAP_ANALYSIS.md  GROUND_TRUTH_REPORT.md  ORCHESTRATION.md  ORCHESTRATION_DESIGN.md  REQUIREMENTS.md  assignment.docx  design.docx  design.md  homework.md
docs/archives/: CODE_REVIEW.md  CODE_REVIEW_OLD.md
docs/phase10/: FIX_PLAN.md  REVIEW.md
docs/phase4/: REVIEW_VALIDATION_PHASE4.md
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css
nginx/: nginx.conf
presentation/: CDDE_Presentation.pptx  CODE_REVIEW.md  PPTX_REVIEW.md  README.md  slides.md
presentation/diagrams/: README.md  derivation_detail.mmd  fsm_states.mmd  orchestration_sequence.mmd
scripts/: README.md  download_data.py  generate_diagrams.py  mailbox_cdisc.py  mailbox_simple_mock.py  mcp_run_cdisc.py  mcp_test_checkpoint.py  validate_adam.py
specs/: README.md  TEMPLATE.md  adsl_cdiscpilot01.yaml  simple_mock.yaml
src/: factory.py
src/agents/: auditor.py  debugger.py  deps.py  derivation_coder.py  factory.py  qc_programmer.py  registry.py  spec_interpreter.py  tools.py  types.py
src/api/: app.py  (+7 more)
tests/: SMOKE_TEST.md  TEST_MCP.md  TEST_PLAN_STEP6_DETAIL.md  conftest.py
(+161 files in other folders)
